--- a/TankGame_ES2/Classes/Diagonal.plist
+++ b/TankGame_ES2/Classes/Diagonal.plist
@@ -8,6 +8,7 @@
 	<integer>2</integer>
 	<key>arenaWallSections</key>
 	<array>
+		<string>50,50-500,200</string>
 		<string>0.00,20.00-768.00,20.00</string>
 		<string>0.00,1024.00-768.00,1024.00</string>
 		<string>0.00,20.00-0.00,1024.00</string>
